--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,12 +1,12 @@
 // Colors
 $clr1: #ce2e6c;
-// $clr2: #4f3a65;
-$clr2: #262626;
-$clr3: #262626;
-// $clr3: #574f7d;
-$clr4: #95adbe;
-$clr5: #dff0ea;
+$clr2: #4f3a65;
+$clr3: #2cc277;
+$clr4: #a04e70;
+$clr5: #95adbe;
 $clr6: #fff;
+$clr7: rgb(22, 21, 21);
+$clr8: rgb(84, 172, 76);
 
 // Breakpoints
 $mobile-breakpoint: 460px;
