--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -13,8 +13,8 @@
 // flex helpers
 
 .app-center{
-    margin: 0 auto;
-    max-width: 980px;
+    // margin: 0 auto;
+    max-width: 950px;
     display: flex;
     flex-direction: column;
     align-items: center;
