--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,5 +1,5 @@
 
-.app-center2{
+.header-container{
     margin: 0 auto;
     max-width: 980px;
     display: flex;
@@ -25,72 +25,46 @@ header {
     -webkit-box-pack: justify;
 
 }
-.home-logo{
-    padding: 16px;
-    //  padding-top: 60px;
-}
-// .search-container{
-//     position: relative;
-//     padding: 10px 50px 20px 180px;
-//     width:199px ;
-//     display: inline;
-//     // height: 28px;
-// }
-    .loggedin-user {
-        // background-color: $clr1;
-        // padding: 2px 8px;
-        border-radius: 1em;
-        align-self: flex-end;
-        color: whitesmoke;
-        span{
-            // background-color: $clr2;
-            padding: 4px;
-            margin: 10px;
-            border-radius: 50%;
-        }
-    }
+
+
+
     nav {
-        width: auto;
-        // background-color: $clr4;
-        padding: 0 50px 0 50px;
+        width: 600px;
+        padding: 0 50px 0 150px;
         
     }
-    nav a:not(:first-child) {
-        // border-top: 1px solid $clr2;
-        // padding: 0 5px;
-        margin: 10px;
-      
+    .home-logo{
+        padding: 20px;
+        //  padding-top: 60px;
     }
-    nav .active {
-        color: $clr2;
+    .third-logo{
+        padding-left: 0px;
     }
-    .wew{
-       padding-left:16px ;
-    }
+    .rourthth-logo{
+        padding-left: 15px;
+     }
+    .hart{
+        padding-left: 20px;
+        padding-right: 20px;
+      }
 
     .user-logo{
         cursor: pointer;
         width: 22px;
         height: 22px;
         border-radius: 50%;
-        //padding-left: 16px;
+        padding-left: 0px;
     }
     .pressed{
         opacity: 0.3;
     }
     .h1-header{
+        width: 103px;
+        height: 29px;
         cursor: pointer;
         font-family: Cookie,cursive;
         margin: 0;
         font-weight: 400;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        // display: block;
-        font-size: 32px;
-        // margin-block-start: 0.67em;
-        // margin-block-end: 0.67em;
-        // margin-inline-start: 0px;
-        // margin-inline-end: 0px;
     }
     .add-story{
         padding-right: 8px;
@@ -104,12 +78,7 @@ header {
         // display: inline;
         margin: 0;
     }
-    .header-links2{
-        // display: inline;
-        width: 600px;
-        padding-inline-start:16px;
-        padding-inline-end:16px;
-    }
+
     .nav-bar{
        // position: relative;
         width: 100%;
@@ -124,18 +93,7 @@ header {
     //     padding-left: 180px;
     //     padding-right: 100px;
     // }
-    .hart{
-      color: rgb(31, 13, 128);
-    }
-//     .hide :hover{
-//         display: block;
-//     }
-//     .hide{
-//         display: none;
-//    }
-//    .show{
-//        display: block;
-//    }
+
     .pluse-img-btn{
       padding-left: 16px;
     }
@@ -143,10 +101,7 @@ header {
         width: 25px;
         padding-right: 0px;
     }
-    .t{
-       
-        // padding: 10px;
-    }
+
     .modal-container{
         // position: absolute;
         
@@ -160,8 +115,8 @@ header {
     }
     .user-modal-container{
         position: absolute;
-        top: 50px;
-        right: 300px;
+        top: 40px;
+        right: 70px;
         width :230px;
         height: 194px;
         background-color: rgb(255, 255, 255);
@@ -169,9 +124,7 @@ header {
         border-radius: 6px;
           
     }
-    .tete{
-        padding-left: 10px;
-    }
+ 
 }
 
 
@@ -187,9 +140,11 @@ header {
 @media screen and (min-width: 1100px) {
     .logo-container{
         display: flex;
+        align-items: center;
         width:636px ;
-        padding-left: 18px;
+        padding-left: 170px;
         padding-right: 10px;
+        
     }
 }
 
@@ -211,25 +166,61 @@ header {
         nav {
             max-width: 100%;
             // background-color: $clr4;
-            padding: 0px 0px 0px 0px ;
+            padding: 0px 0px 0px 10px ;
             
         }
         .header-links{
             // display: inline;
             width: 100%;
             padding: 0px 0px 0px 12px ;
- 
-        }
-        .home-logo{
-            padding: 0px;
-            //  padding-top: 60px;
+            
         }
         .logo-container{
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             max-height: 100%;
             max-width: 50%;
             padding-left: 20px;
+            padding-top: 10px;
+        }
+        .home-logo{
+            padding-left: 15px;
+            padding-right: 15px;
+
+            //  padding-top: 60px;
+        }
+
+        
+    .third-logo{
+        padding-left: 0px;
+    }
+    .rourthth-logo{
+        padding-left: 15px;
+     }
+    .hart{
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+    .user-logo{
+        cursor: pointer;
+        width: 22px;
+        height: 22px;
+        border-radius: 50%;
+        padding-left: 0px;
+    }
+    
+        .user-modal-container{
+            position: absolute;
+            top: 50px;
+            right: 30px;
+            width :130px;
+            height: 100px;
+            background-color: rgb(255, 255, 255);
+            z-index: 999;
+            border-radius: 6px;           
         }
     }
+
+
 }
