--- a/src/assets/styles/cmps/_app-footer.scss
+++ b/src/assets/styles/cmps/_app-footer.scss
@@ -1,4 +1,6 @@
 .app-footer{
-    position: relative;
-    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: -90vh;
 }
