--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -7,6 +7,9 @@
     color: #262626;
     margin: 0;
     background-color: #18181a;
+    min-height: 100vh;
+    padding-bottom: 100px;
+   
 }
 
 #nav{
