--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -43,8 +43,8 @@
     }
   
     > img {
-      height: 100%;
-      object-fit: cover;
+    //   height: 100%;
+    //   object-fit: cover;
     }
   }
   
