--- a/src/assets/styles/cmps/_user-filter.scss
+++ b/src/assets/styles/cmps/_user-filter.scss
@@ -8,15 +8,14 @@
 
 .main-header-search{
     border: 1px solid #dbdbdb;
-    background-color: #fafafa;
+    background-color: #f0f2f5;
      padding: 12.5px;
    font-size: small;
     width: 215px;
+    height: 40px;
     font-size: inherit;
-    border-radius: 3px;
+    border-radius: 50px;
     
-    height: 28px;
-
     -webkit-writing-mode: horizontal-tb !important;
     text-rendering: auto;
     // color: -internal-light-dark(black, white);
