--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,21 +1,45 @@
 
-
-
 .body{
     font-family: Arial,sans-serif;
     line-height: 1.8;
     color: #262626;
     margin: 0;
-    background-color: #18181a;
     min-height: 150vh;
-    padding-bottom: 100px;
-   
+    padding-bottom: 100px; 
 }
 
-#nav{
- 
-        padding: 0px 0px  0px 0px  ;
+
+.app{
 }
+#nav{
+    padding: 0px 0px  0px 0px  ;
+}
+.users-for-chat-container{
+   position: absolute;
+   top: 100px;
+   right: 50vh;
+  
+}
+.users-for-chat{
+ 
+    display: flex;
+    flex-direction: column;
+  
+    .users-img-for-chat{
+        border-radius: 100px;
+        width: 50px;
+        cursor: pointer;
+        border: 3px solid rgb(15, 15, 15);
+    }
+    .gotmsg{
+        box-shadow: 0 0 3pt 2pt red;
+    }
+    .sendTo{
+        box-shadow: 0 0 3pt 2pt rgb(36, 202, 58);
+
+    }
+}
+
 
 .absolute-pos{
     position: absolute;
