--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -1,25 +1,28 @@
 * {
     box-sizing: border-box;
 }
-body {
-    font-family: Arial,sans-serif;
-    line-height: 1.8;
-    color: #262626;
-    margin: 0;
-    background-color: #fafafa;
+.main{
+    //position: relative;
+
+    margin: 30px 0;
 }
+// body {
+//     font-family: Arial,sans-serif;
+//     line-height: 1.8;
+//     color: #262626;
+//     margin: 0;
+//     background-color: #fafafa;
+// }
 
 .story-father{
     position: relative;
 }
 
-.main{
-    //position: relative;
-    margin: 30px 0;
-}
 
 .post-details {
     border: 1px solid #dbdbdb;
+    background-color: #fff;
+    box-shadow: 5px 5px 8px 3px #d8d5d5be;    
     max-width: 616px;
     overflow: hidden;
     border-radius: 3px;
