--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -7,10 +7,10 @@
     // align-items: center;
 
     box-shadow: 5px 10px 10px 100vh #888888be;    
-    height: 557px;
-    width: 935px;
-    top: 5;
-    left: 300px;
+    height: 500px;
+    width: 900px;
+    top: 20px;
+    left: 200px;
     z-index: 22;
     position: fixed;
     background-color: #fff;
