--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -33,6 +33,11 @@
     height:150px ;
     width:150px;
   }
+  .no-img{
+      height: 60%;
+      cursor: pointer;
+  
+  }
 
 
 .profile-tabs-tab{
@@ -99,7 +104,33 @@
     padding: 10px 100px 10px 110px;
    
   }
-
+.user-fullname-fill-container{
+  padding-bottom: 10px;
+}
+  .user-details-fill{
+    display: flex;
+    flex-direction: column;
+    // background-color: rgb(117, 19, 19);
+    // height: 250px;
+  }
+.user-fullname-fill{
+  width: 200px;
+  height: 30px;
+  border-radius: 10px;
+  padding: 6px 10px 6px 12px!important;
+  outline: none;
+  border: none;
+  font-size: large;
+  font-family: inherit
+ }
+.user-bio-fill{
+  border-radius: 10px;
+  width: 200px;
+  height: 50px;
+  padding: 6px 10px 6px 12px!important;
+  background-color: #ffffff;
+  border: 0;
+}
   .profile-description-top{
     padding: 10px 0 15px;
     font-size: 20px;
