--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -131,6 +131,19 @@
   background-color: #ffffff;
   border: 0;
 }
+.edit-user-details-btn{
+  position: relative;
+  right : 15rem;
+}
+.save-user-details{
+  position: absolute;
+  background-color: #1877F2;
+  height: 30px;
+  width: 80px;
+  border-radius: 8px;
+  right: 40px;
+  font-size: large;
+}
   .profile-description-top{
     padding: 10px 0 15px;
     font-size: 20px;
