--- a/src/assets/styles/cmps/delete-modal.scss
+++ b/src/assets/styles/cmps/delete-modal.scss
@@ -4,7 +4,7 @@
     align-items: center;
     right: 0px;
     position:absolute ;
-    background-color: rgba(236, 240, 232, 0.774);
+    background-color: rgba(235, 155, 155, 0.514);
     top:-40px;
     right: -40px;
     width: 100px;
@@ -18,4 +18,6 @@
     background-color: Transparent;
     height: 30px;
     outline:none;
+    font-size: x-large;
+    font-weight: 700;
 }
