--- a/src/assets/styles/cmps/_story-comment.scss
+++ b/src/assets/styles/cmps/_story-comment.scss
@@ -1,7 +1,7 @@
 .screen-comment{
    display: flex;
    justify-content: space-between;
-   padding: 5px;
+   padding: 5px 0px 5px 5px;
    width: inherit;
 }
 
