--- a/src/assets/styles/cmps/_story-preview-modal.scss
+++ b/src/assets/styles/cmps/_story-preview-modal.scss
@@ -1,19 +1,15 @@
-.story-details-content-preview{
-    //                                            
-    //  position: relative;                
+
+  
+.story-details-content-preview{           
     padding: 0px 0px;
-    box-sizing: border-box;
-    
+    box-sizing: border-box;  
     font-family: Arial,sans-serif;
     line-height: 1.8;
     color: #262626;
     //height: inherit;
-    
-    
-}
-.test6{
-    // width: 100%;
-    // border-bottom: 1px solid rgba(var(--ce3,239,239,239),1);
+    // border-left-style: outset;
+    min-width :330px;
+    // border-collapse: collapse;
 }
 
 .post-details-header-preview{
@@ -24,7 +20,6 @@
     flex-direction: row;
     -webkit-box-pack: justify;
     //  max-width: 335px;
-    width :335px;
     height: 64px;
     border-bottom: 1px solid rgba(var(--ce3,239,239,239),1);
 }
@@ -34,10 +29,9 @@
     // max-height: 100%;
     // overflow: auto;
     margin-bottom: auto;
-    padding: 16px;
+    padding: 16px 0px 16px 16px;
     max-height: 300px;
     overflow: auto;
-    
     border-top: 1px solid #e8e8e8;
     border-bottom: 1px solid #e8e8e8;
 
