--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -35,10 +35,12 @@
 }
 
 .story-img{
+    border-bottom-style:inset ;
+
     //  position: relative;  
 }
 .story-details-content{
-    padding-top: 0px;              //                     <======================= modal father ==============================
+    padding-top: 10px;              //                     <======================= modal father ==============================
     position: relative;                
     padding: 0px 16px;
     box-sizing: border-box;
@@ -57,6 +59,7 @@
 
 }
 .post-details-header{
+    border-bottom-style:inset ;
     padding: 16px;
     display: flex;
     justify-content : space-between;
