update login-signup page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -32,6 +32,7 @@
     .users-img-for-chat{
         border-radius: 100px;
         width: 50px;
+        height: 50px;
         cursor: pointer;
         border: 3px solid rgb(15, 15, 15);
     }
