--- a/src/assets/styles/cmps/_story-preview-modal.scss
+++ b/src/assets/styles/cmps/_story-preview-modal.scss
@@ -6,10 +6,11 @@
     font-family: Arial,sans-serif;
     line-height: 1.8;
     color: #262626;
-    //height: inherit;
-    // border-left-style: outset;
+    height: inherit;
+    border-left-style: outset;
     min-width :330px;
     // border-collapse: collapse;
+    border-collapse:inherit
 }
 
 .post-details-header-preview{
