--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -31,7 +31,6 @@
   }
 
   .story-preview-img-modal{
-    max-width: 100%;
     max-height: 100%;
     object-fit: cover;
  
@@ -45,7 +44,8 @@
     // max-width: 365px;
     // height: 100%;
     // height: inherit;
-    border-collapse: collapse;
+    // border-collapse: collapse;
     border-left-style: outset;
     padding-left: 0px;
+   
 }
