--- a/src/assets/styles/cmps/_app-footer.scss
+++ b/src/assets/styles/cmps/_app-footer.scss
@@ -1,4 +1,7 @@
 .app-footer{
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    text-align: center;
+    padding-top: 20px;
    }
